--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "emploees-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/emploees-app/",
+  "homepage": "https://github.com/employees-app/",
   "dependencies": {
     "@material-ui/core": "^4.11.1",
     "@testing-library/jest-dom": "^5.11.4",
